--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
-    "swr": "^2.2.5",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
