--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.19",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.2",
     "next": "14.2.2",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.1.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.3",
